[package]
name = "afl-stat"
version = "0.1.0"
authors = ["Lancern <msrlancern@126.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Parsing AFL status file fuzzer_stats"
homepage = "https://github.com/Lancern/afl-stat-rs"
repository = "https://github.com/Lancern/afl-stat-rs"
documentation = "https://docs.rs/afl-stat/latest"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
